# ModelingMethodsLab2

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: InteractiveChartView.h  Lab2Variant.h  MainWindow.h  MathWidgets.h  PlotChartUtils.h  PlotChartWidget.h  PresentationBuilders.h  SamplingEngine.h  SamplingTypes.h  TableExport.h  TableModels.h  UiFormatting.h
src/: InteractiveChartView.cpp  MainWindow.cpp  MathWidgets.cpp  PlotChartUtils.cpp  PlotChartWidget.cpp  PresentationBuilders.cpp  SamplingEngine.cpp  TableExport.cpp  TableModels.cpp  UiFormatting.cpp
